# laica

./: .lfsconfig  AGENTS.md  SConstruct  pyproject.toml
.cursor/plans/: train-944f4c7a.plan.md
.github/workflows/: release-drafter.yml  release.yaml  selfdrive_tests.yaml
cereal/: log.capnp  services.py
common/: SConscript  params_keys.h
laica/: SConscript  __init__.py  pyproject.toml
laica/common/: params_keys.h
laica/potholed/: .gitignore  AGENTS.md  README.md  SConscript  potholed.py  test_pothole_detection.py
laica/potholed/models/: best.onnx
laica/potholed/scripts/: benchmark_potholed.py  convert_potholed.py  train_potholed.py
laica/system/: manager.py
selfdrive/ui/: ui.cc
selfdrive/ui/qt/onroad/: annotated_camera.cc  annotated_camera.h  model.h
selfdrive/ui/sunnypilot/: ui.cc
selfdrive/ui/sunnypilot/qt/offroad/settings/: models_panel.cc  models_panel.h
system/: version.py
system/manager/: process_config.py
